--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -32,9 +32,10 @@ jobs:
         with:
             metadata-matrix: '["zookeeper"]'
     db-ce-no-optimizer:
-        uses: ./.github/workflows/DB-CE-no-optimizer.yml
+        uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
+            close-optimizer: "true"
 
     remote-test:
         uses: ./.github/workflows/remote-test.yml
@@ -48,8 +49,9 @@ jobs:
             os-matrix: '["ubuntu-latest"]'
             metadata-matrix: '["zookeeper"]'
     tpc-h-regression-test-no-optimizer:
-        uses: ./.github/workflows/tpc-h-no-optimizer.yml
+        uses: ./.github/workflows/tpc-h.yml
         with:
             os-matrix: '["ubuntu-latest"]'
             metadata-matrix: '["zookeeper"]'
             db-matrix: '["InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+            close-optimizer: "true"
