--- a/dataSource/pom.xml
+++ b/dataSource/pom.xml
@@ -76,7 +76,7 @@
                                 </dependencySets>
                                 <fileSets>
                                     <fileSet>
-                                        <directory>src/main/resources/driver</directory>
+                                        <directory>target/assembly</directory>
                                         <outputDirectory>driver/${project.artifactId}</outputDirectory>
                                     </fileSet>
                                 </fileSets>
