--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -162,7 +162,7 @@ jobs:
               shell: bash
               run: |
                   docker ps
-                  docker-compose logs
+                  docker-compose -f 19530/docker-compose-19530.yml logs
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
