--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -120,6 +120,19 @@ jobs:
               with:
                   DB-name: ${{ matrix.DB-name }}
 
+            - name: Rewrite DB Conf in Old IGinX
+              uses: ./.github/actions/dbConfWriter
+              with:
+                DB-name: ${{ matrix.DB-name }}
+                Root-Dir-Path: "IGinX"
+                DB-port: ${{ steps.find-port.outputs.port2 }}
+
+            - name: Install Old IGinX with Maven
+              shell: bash
+              run: |
+                cd IGinX
+                mvn clean package -DskipTests -P-format -q
+
             - name: Change Old IGinX Config
               uses: ./.github/actions/confWriter
               with:
