--- a/.github/actions/service/vectordb/action.yml
+++ b/.github/actions/service/vectordb/action.yml
@@ -40,16 +40,26 @@ runs:
               done
               echo "docker-compose.yml created successfully"
 
+#        - if: fromJSON(inputs.start) && runner.os == 'macOS'
+#          name: Start milvus
+#          shell: bash
+#          working-directory: ${{ github.workspace }}
+#          run: |
+#              cp -f docker/milvus/standalone_embed.sh standalone_embed.sh
+#              sudo chown $(whoami) standalone_embed.sh
+#              sudo nohup bash standalone_embed.sh start
+#              sleep 10
+#              docker ps -a
+
         - if: fromJSON(inputs.start) && runner.os == 'macOS'
           name: Start milvus
           shell: bash
           working-directory: ${{ github.workspace }}
           run: |
-              cp -f docker/milvus/standalone_embed.sh standalone_embed.sh
-              sudo chown $(whoami) standalone_embed.sh
-              sudo nohup bash standalone_embed.sh start
-              sleep 10
-              docker ps -a
+            sudo chown -R $(whoami) $port/
+            sudo nohup docker-compose -f $port/docker-compose-$port.yml up -d
+            sleep 10
+            docker ps -a
 
         - if: fromJSON(inputs.start) && runner.os == 'Linux'
           name: Start milvus
