--- a/docker/milvus/docker-compose.yml
+++ b/docker/milvus/docker-compose.yml
@@ -72,6 +72,11 @@ services:
       retries: 3
     ports:
       - "19530:19530"
+    deploy:
+      resources:
+        reservations:
+          cpus: '1'
+          memory: 3G
     depends_on:
       - "etcd"
       - "minio"
