--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -162,7 +162,7 @@ jobs:
               shell: bash
               run: |
                   docker ps
-                  docker logs milvus-standalone
+                  docker-compose logs
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
