--- a/docker/milvus/docker-compose.yml
+++ b/docker/milvus/docker-compose.yml
@@ -30,10 +30,7 @@ services:
       - ETCD_QUOTA_BACKEND_BYTES=4294967296
       - ETCD_SNAPSHOT_COUNT=50000
     volumes:
-      - type: tmpfs
-        target: /etcd-data
-        tmpfs:
-          size: 536870912
+      - /volumes/etcd:/etcd
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
     healthcheck:
       test: ["CMD", "etcdctl", "endpoint", "health"]
