--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -27,8 +27,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["VectorDB"]'
-#                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
 
 jobs:
     Union-DB-Test:
@@ -156,13 +155,6 @@ jobs:
               shell: bash
               run: |
                   cat iginx-*.log
-
-            - name: Show Docker Info
-              if: always()
-              shell: bash
-              run: |
-                  docker ps
-                  docker-compose logs
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
