--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -1,6 +1,6 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
-storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis
+storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis,VectorDB
 relationalStorageEngineList=PostgreSQL,MySQL
 
 # the test for every engine
@@ -23,6 +23,7 @@ PostgreSQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToC
 MongoDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 Redis-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 MySQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
+VectorDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 
 # DataSources Test Config
 IoTDB12_mock=127.0.0.1#6667#IoTDB12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
@@ -33,6 +34,7 @@ MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false
 Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 ## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
+VectorDB_mock=127.0.0.1#19530#vectordb#protocol=grpc#has_data=false#is_read_only=false#timeout=5000
 
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
@@ -42,6 +44,7 @@ PostgreSQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
 MySQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
+VectorDB_class=cn.edu.tsinghua.iginx.vectordb.MilvusStorage
 
 # class name for history data generator
 IoTDB12_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.iotdb.IoTDB12HistoryDataGenerator
@@ -51,6 +54,7 @@ PostgreSQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.postgresql
 MongoDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mongodb.MongoDBHistoryDataGenerator
 Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHistoryDataGenerator
 MySQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
+VectorDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.vectordb.VectorDBHistoryDataGenerator
 
 # DB-CE port mapping, oriPort,expPort,readOnlyPort
 IoTDB12_port=6667,6668,6669
@@ -60,6 +64,7 @@ PostgreSQL_port=5432,5433,5434
 MongoDB_port=27017,27018,27019
 Redis_port=6379,6380,6381
 MySQL_port=3306,3307,3308
+VectorDB_port=19530,19531,19532
 
 # Local test stand-alone
 stand_alone_DB=IoTDB12
