add vectordb database

--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -26,7 +26,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
             close-optimizer:
                 description: "Whether to close the optimizer"
                 type: string
@@ -38,7 +38,7 @@ env:
 
 jobs:
     DB-CE:
-        timeout-minutes: 120
+        timeout-minutes: 360
         strategy:
             fail-fast: false
             matrix:
@@ -73,6 +73,7 @@ jobs:
                   MySQL-ports: 3306 3307 3308
                   PostgreSQL-ports: 5432 5433 5434
                   Redis-ports: 6379 6380 6381
+                  VectorDB-ports: 19530 19531 19532
 
             - name: Install IGinX with Maven
               shell: bash
