--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -72,6 +72,10 @@
             <version>1.6.1</version>
         </dependency>
         <dependency>
+            <groupId>cn.edu.tsinghua</groupId>
+            <artifactId>arrow-0patch</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.arrow</groupId>
             <artifactId>arrow-vector</artifactId>
         </dependency>
