--- a/arrow-patch/pom.xml
+++ b/arrow-patch/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>cn.edu.tsinghua</groupId>
         <artifactId>iginx</artifactId>
-        <version>0.8.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>arrow-0patch</artifactId>
