--- a/dataSource/pom.xml
+++ b/dataSource/pom.xml
@@ -74,6 +74,12 @@
                                         <outputDirectory>driver/${project.artifactId}</outputDirectory>
                                     </dependencySet>
                                 </dependencySets>
+                                <fileSets>
+                                    <fileSet>
+                                        <directory>target/assembly</directory>
+                                        <outputDirectory>driver/${project.artifactId}</outputDirectory>
+                                    </fileSet>
+                                </fileSets>
                             </inlineDescriptor>
                         </inlineDescriptors>
                     </configuration>
