--- a/.github/actions/iginxRunner/action.yml
+++ b/.github/actions/iginxRunner/action.yml
@@ -23,8 +23,14 @@ runs:
         # TODO: use iginx binaries in assembly rather than core
         - if: inputs.if-test-udf=='true'
           name: Test UDF Path
-          shell: bash
+          shell: bash -el {0}
           run: |
+              if [ "${{ inputs.use-conda }}" == "true" ]; then
+                conda env list
+                conda activate ${{ inputs.conda-env }}
+                which python
+                python --version
+              fi
               if [ "$RUNNER_OS" == "Linux" ]; then
                 sudo sed -i 's/needInitBasicUDFFunctions=false/needInitBasicUDFFunctions=true/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
               elif [ "$RUNNER_OS" == "Windows" ]; then
